Add sandgarden CLI to dev container setup

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -49,5 +49,5 @@
       ]
     }
   },
-  "postCreateCommand": "sudo chown -R vscode:vscode /workspaces/sandgarden"
+  "postCreateCommand": "sh /workspaces/sandgarden/setup.sh"
 }
