add pg to docker-compose

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -25,6 +25,24 @@ services:
       - .sandgarden:/.sandgarden
     networks:
       - sandgarden_demo_network
+  
+  postgres:
+    image: postgres:16
+    environment:
+      POSTGRES_USER: tickets
+      POSTGRES_PASSWORD: devpassword
+      POSTGRES_DB: tickets
+    ports:
+      - "5433:5432"
+    # volumes:
+    #   - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U tickets"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    networks:
+      - sandgarden_demo_network
 
 networks:
   sandgarden_demo_network:
