--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     image: mcr.microsoft.com/devcontainers/base:bookworm
     environment:
       - SAND_API_KEY=${SAND_API_KEY}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
     volumes:
       - ..:/workspaces/sandgarden:cached
       - /var/run/docker.sock:/var/run/docker.sock
@@ -10,6 +11,8 @@ services:
     command: sleep infinity
     user: vscode
     init: true
+    networks:
+      - sandgarden_demo_network
 
   director:
     image: public.ecr.aws/h7j2x0j6/sgdirector:latest
