--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     init: true
 
   director:
-    image: public.ecr.aws/h7j2x0j6/sgdirector:latest
+    image: public.ecr.aws/sandgarden/sgdirector:latest
     environment:
       - SAND_LOG_LEVEL=debug
       - SAND_API_KEY=${SAND_API_KEY}
