--- a/local/docker_compose/docker-compose.yml
+++ b/local/docker_compose/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   director:
-    image: public.ecr.aws/h7j2x0j6/sgdirector:latest
+    image: public.ecr.aws/sandgarden/sgdirector:latest
     environment:
       - SAND_LOG_LEVEL=debug
       - SAND_API_KEY=${SAND_API_KEY}
