--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -17,15 +17,10 @@ services:
       - SAND_LOG_LEVEL=debug
       - SAND_API_KEY=${SAND_API_KEY}
       - SAND_HOME=/.sandgarden
+      - SAND_TERMINATE_TLS=false
     ports:
       - "8987:8987"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ..:/workspaces/sandgarden
       - .sandgarden:/.sandgarden
-    networks:
-      - sandgarden_demo_network
-
-networks:
-  sandgarden_demo_network:
-    name: sandgarden_demo_network
