Update devcontainer configuration to enhance environment setup and ignore additional files
This commit modifies the .devcontainer/devcontainer.json file to improve the post-create and initialize commands, ensuring that Git user configuration is sourced from the new env.properties file. Additionally, the .gitignore file is updated to ignore dev container files and other environment-related files, streamlining the development process for Sandgarden users.

--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,9 @@ terraform.rc
 .env
 *.db
 *.lock.hcl
+# Ignore dev container files
 .devcontainer/.sandgarden/staticcfg.json
 setup.sh
-
 .sandgarden
+env.properties
+sand
