--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -47,7 +47,7 @@
         "ms-vscode-remote.remote-containers",
         "ms-vscode-remote.vscode-remote-extensionpack",
         "ms-python.python",
-        "ms-python.vscode-pylance", 
+        "ms-python.vscode-pylance",
         "ms-python.debugpy",
         "vscode.docker",
         "vscode.yaml",
@@ -64,7 +64,7 @@
   "postCreateCommand": "sh /workspaces/sandgarden/setup.sh && bash -c 'if [ -f .devcontainer/env.properties ]; then source .devcontainer/env.properties; if [ ! -z \"$GIT_USER_NAME\" ]; then git config --global user.name \"$GIT_USER_NAME\"; fi; if [ ! -z \"$GIT_USER_EMAIL\" ]; then git config --global user.email \"$GIT_USER_EMAIL\"; fi; fi'",
   "mounts": [
     "source=${localEnv:HOME}/.ssh/known_hosts,target=/root/.ssh/known_hosts,type=bind,consistency=cached",
-    "source=${localEnv:SSH_AUTH_SOCK_PATH:/run/host-services/ssh-auth.sock},target=/run/host-services/ssh-auth.sock,type=bind,consistency=cached,if=exists"
+    "source=${localEnv:HOME}/.gitconfig,target=/home/user/.gitconfig,type=bind,consistency=cached"
   ],
   "remoteEnv": {},
   "initializeCommand": "bash -c 'if [[ \"$(uname -s)\" == \"Darwin\" ]]; then echo \"SSH_AUTH_SOCK_PATH=/run/host-services/ssh-auth.sock\" > .devcontainer/env.properties; else echo \"# Not on macOS\" > .devcontainer/env.properties; fi; GIT_USER_NAME=$(git config --get user.name 2>/dev/null || echo \"\"); GIT_USER_EMAIL=$(git config --get user.email 2>/dev/null || echo \"\"); echo \"GIT_USER_NAME=\\\"$GIT_USER_NAME\\\"\" >> .devcontainer/env.properties; echo \"GIT_USER_EMAIL=\\\"$GIT_USER_EMAIL\\\"\" >> .devcontainer/env.properties'",
