--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -63,13 +63,8 @@
   },
   "postCreateCommand": "sh /workspaces/sandgarden/setup.sh && bash -c 'if [ -f .devcontainer/env.properties ]; then source .devcontainer/env.properties; if [ ! -z \"$GIT_USER_NAME\" ]; then git config --global user.name \"$GIT_USER_NAME\"; fi; if [ ! -z \"$GIT_USER_EMAIL\" ]; then git config --global user.email \"$GIT_USER_EMAIL\"; fi; fi'",
   "mounts": [
-    "source=${localEnv:HOME}/.ssh/known_hosts,target=/root/.ssh/known_hosts,type=bind,consistency=cached",
-    "source=${localEnv:HOME}/.gitconfig,target=/home/user/.gitconfig,type=bind,consistency=cached"
+    "source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached",
+    "source=${localEnv:HOME}/.gitconfig,target=/home/vscode/.gitconfig,type=bind,consistency=cached"
   ],
-  "remoteEnv": {},
-  "initializeCommand": "bash -c 'if [[ \"$(uname -s)\" == \"Darwin\" ]]; then echo \"SSH_AUTH_SOCK_PATH=/run/host-services/ssh-auth.sock\" > .devcontainer/env.properties; else echo \"# Not on macOS\" > .devcontainer/env.properties; fi; GIT_USER_NAME=$(git config --get user.name 2>/dev/null || echo \"\"); GIT_USER_EMAIL=$(git config --get user.email 2>/dev/null || echo \"\"); echo \"GIT_USER_NAME=\\\"$GIT_USER_NAME\\\"\" >> .devcontainer/env.properties; echo \"GIT_USER_EMAIL=\\\"$GIT_USER_EMAIL\\\"\" >> .devcontainer/env.properties'",
-  "updateContentCommand": "bash -c 'if [ -f .devcontainer/env.properties ] && grep -q SSH_AUTH_SOCK_PATH .devcontainer/env.properties; then source .devcontainer/env.properties && echo \"Adding macOS SSH agent mount\"; fi'",
-  "containerEnv": {
-    "SSH_AUTH_SOCK": "${localEnv:SSH_AUTH_SOCK_PATH:/run/host-services/ssh-auth.sock}"
-  }
+  "remoteEnv": {}
 }
