--- a/examples/syncing-with-github/github-workflow.yml
+++ b/examples/syncing-with-github/github-workflow.yml
@@ -1,20 +1,37 @@
 name: Deploy to Sandgarden From Github Actions
 
 on:
-  # TODO: Add the events that trigger your workflow
-  # pull_request:
-  #   types: [opened, synchronize, reopened]
+  pull_request:
+    types: [closed]
+    branches:
+      - development
+      - production
 
 jobs:
   deploy-to-sandgarden:
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to Sandgarden
-        uses: sandgarden/github-action@v1
+      - uses: actions/checkout@v4
         with:
-          api-key: ${{ secrets.SAND_API_KEY }}
-          api-url: ${{ secrets.SAND_API_URL }}
-          branch: ${{ github.ref }}
-          environment: ${{ github.ref_name }}
-          # TODO: Add any other inputs you need for your workflow
-          # input-name: ${{ github.event.inputs.input-name }}
+          ref: ${{ github.event.pull_request.base.ref }}
+          
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+           
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Install Sandgarden CLI
+        run: |
+          curl https://api.sandgarden.com/api/v1/assets/sand/latest/sand_linux_amd64 -L -o sand
+          sudo mv sand /usr/local/bin/sand
+          sudo chmod 0755 /usr/local/bin/sand
+          
+      - name: Sync to Sandgarden
+        env:
+          SAND_API_KEY: ${{ secrets.SAND_API_KEY }}
+          SAND_API_URL: ${{ secrets.SAND_API_URL }}
+        run: python sync_to_sandgarden.py ${{ github.event.pull_request.base.ref }} ${{ github.event.pull_request.base.ref }}
