--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -1,1 +1,4 @@
 SAND_API_KEY=YOUR_SAND_API_KEY
+SSH_AUTH_SOCK_PATH=/run/host-services/ssh-auth.sock
+GIT_USER_NAME="Your Name"
+GIT_USER_EMAIL="Your Email"
