--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -61,7 +61,7 @@
       ]
     }
   },
-  "postCreateCommand": "sh /workspaces/sandgarden/setup.sh && bash -c 'if [ -f .devcontainer/env.properties ]; then source .devcontainer/env.properties; if [ ! -z \"$GIT_USER_NAME\" ]; then git config --global user.name \"$GIT_USER_NAME\"; fi; if [ ! -z \"$GIT_USER_EMAIL\" ]; then git config --global user.email \"$GIT_USER_EMAIL\"; fi; fi'",
+  "postCreateCommand": "sh /workspaces/sandgarden/setup.sh && bash -c 'if [ -f .devcontainer/.env ]; then source .devcontainer/.env; if [ ! -z \"$GIT_USER_NAME\" ]; then git config --global user.name \"$GIT_USER_NAME\"; fi; if [ ! -z \"$GIT_USER_EMAIL\" ]; then git config --global user.email \"$GIT_USER_EMAIL\"; fi; fi'",
   "mounts": [
     "source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached",
     "source=${localEnv:HOME}/.gitconfig,target=/home/vscode/.gitconfig,type=bind,consistency=cached"
