--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -47,14 +47,24 @@
         "ms-vscode-remote.remote-containers",
         "ms-vscode-remote.vscode-remote-extensionpack",
         "ms-python.python",
-        "ms-python.vscode-pylance", 
+        "ms-python.vscode-pylance",
         "ms-python.debugpy",
         "vscode.docker",
         "vscode.yaml",
         "ms-azuretools.vscode-docker",
-        "KevinRose.vsc-python-indent"
+        "KevinRose.vsc-python-indent",
+        "waderyan.gitblame",
+        "github.vscode-github-actions",
+        "golang.go",
+        "andrejunges.handlebars",
+        "hashicorp.terraform"
       ]
     }
   },
-  "postCreateCommand": "sh /workspaces/sandgarden/setup.sh"
+  "postCreateCommand": "sh /workspaces/sandgarden/setup.sh && bash -c 'if [ -f .devcontainer/.env ]; then source .devcontainer/.env; if [ ! -z \"$GIT_USER_NAME\" ]; then git config --global user.name \"$GIT_USER_NAME\"; fi; if [ ! -z \"$GIT_USER_EMAIL\" ]; then git config --global user.email \"$GIT_USER_EMAIL\"; fi; fi'",
+  "mounts": [
+    "source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached",
+    "source=${localEnv:HOME}/.gitconfig,target=/home/vscode/.gitconfig,type=bind,consistency=cached"
+  ],
+  "remoteEnv": {}
 }
