add host path environment variable so you can create local steps inside dev container

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     image: mcr.microsoft.com/devcontainers/base:bookworm
     environment:
       - SAND_API_KEY=${SAND_API_KEY}
+      - HOST_PATH=$PWD
     volumes:
       - ..:/workspaces/sandgarden:cached
       - /var/run/docker.sock:/var/run/docker.sock
