--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - SAND_API_KEY=${SAND_API_KEY}
       - SAND_HOME=/.sandgarden
       - SAND_TERMINATE_TLS=false
+      - SAND_CLUSTER=getting-started
     ports:
       - "8987:8987"
     volumes:
