--- a/local/docker_compose/docker-compose.yml
+++ b/local/docker_compose/docker-compose.yml
@@ -5,15 +5,10 @@ services:
       - SAND_LOG_LEVEL=debug
       - SAND_API_KEY=${SAND_API_KEY}
       - SAND_HOME=/.sandgarden
+      - SAND_CLUSTER=getting-started
     ports:
       - "8987:8987"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - .:/workspaces/sandgarden
+      - ../../:/workspaces/sandgarden
       - .sandgarden:/.sandgarden
-    networks:
-      - sandgarden_demo_network
-
-networks:
-  sandgarden_demo_network:
-    name: sandgarden_demo_network
