--- a/local/docker_compose/docker-compose.yml
+++ b/local/docker_compose/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - SAND_API_KEY=${SAND_API_KEY}
       - SAND_HOME=/.sandgarden
       - SAND_CLUSTER=getting-started
+      - SAND_DEFAULT_DOCKER_PLATFORM=linux/arm64
     ports:
       - "8987:8987"
     volumes:
