Update docker-compose.yml to mount volume at appropriate level
Changed to reflect the new directory structure without /local

--- a/docker_compose/docker-compose.yml
+++ b/docker_compose/docker-compose.yml
@@ -11,5 +11,5 @@ services:
       - "8987:8987"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - ../../:/workspaces/sandgarden
+      - ../:/workspaces/sandgarden
       - .sandgarden:/.sandgarden
